adding structures to menu nav

--- a/templates/partials/_header.twig
+++ b/templates/partials/_header.twig
@@ -18,6 +18,11 @@
  {# BOX SLIDER CDN #}
  <link rel="stylesheet" href="https://cdn.jsdelivr.net/bxslider/4.2.12/jquery.bxslider.css"> 
 
+{# Bootstrap Smart Menu #}
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jquery.smartmenus/1.1.0/addons/bootstrap-4/jquery.smartmenus.bootstrap-4.css">
+
   {# Custom CSS #}
   <link rel="stylesheet" href="/styles/main.css">
+
+  
 
