adding sticky effect to nav

--- a/web/styles/main.css
+++ b/web/styles/main.css
@@ -25,7 +25,8 @@
   #nav-container #nav-bottom {
     background-color: #5C5C5C;
     min-height: 75px;
-    padding-top: 15px; }
+    padding-top: 15px;
+    z-index: 1000; }
     #nav-container #nav-bottom img {
       height: 30px !important; }
     #nav-container #nav-bottom a {
@@ -304,3 +305,13 @@ footer {
 
 .show-tabs {
   display: flex !important; }
+
+/* The sticky class is added to the header with JS when it reaches its scroll position */
+.sticky {
+  position: fixed;
+  top: 0;
+  width: 100%; }
+
+/* Add some top padding to the page content to prevent sudden quick movement (as the header gets a new position at the top of the page (position:fixed and top:0) */
+.sticky + .content {
+  padding-top: 102px; }
