--- a/SCSS/sections/index/_nav.scss
+++ b/SCSS/sections/index/_nav.scss
@@ -44,6 +44,7 @@
         background-color: #5C5C5C;
         min-height: 75px;
         padding-top: 15px;
+        z-index: 1000;
 
         img {
             height: 30px !important;
