--- a/templates/jobs/index.twig
+++ b/templates/jobs/index.twig
@@ -106,11 +106,6 @@
     {% endfor %}
 
     <div class="container text-center">
-        {# {% if pageInfo.prevUrl %}<a class="btn btn-small btn-success text-center" href="{{ pageInfo.prevUrl }}">Previous
-            Page</a> &nbsp; &nbsp;{% endif %}
-        {% if pageInfo.nextUrl %}<a class="btn btn-small btn-success text-center" href="{{ pageInfo.nextUrl }}">Next
-            Page</a>{% endif %} #}
-
                {% if pageInfo.prevUrl %}<a href='{{ pageInfo.prevUrl }}' class='btn btn-small btn-success text-center'>&lt;</a>{% endif %}
 
                     {% if pageInfo.currentPage > 2 %}
@@ -142,5 +137,6 @@
                     {% if pageInfo.nextUrl %}<a href='{{ pageInfo.nextUrl }}' class='btn btn-small btn-success text-center'>&gt;</a>{% endif %}
 
 
+</div>
 </div>
 {% endblock %}
