--- a/templates/partials/_footer.twig
+++ b/templates/partials/_footer.twig
@@ -48,6 +48,7 @@
 
 <!-- Custom JQuery -->
 <script src="/scripts/shortform.js"></script>
+<script src="/scripts/sticky-nav.js"></script>
 <script src="/scripts/general-search.js"></script>
 
 
