manually formatted the shortform, need to change the hash values in the server to match the server values

--- a/SCSS/main.scss
+++ b/SCSS/main.scss
@@ -1,7 +1,7 @@
 @import 'sections/index/index.scss';
 @import 'sections/jobs/index.scss';
 @import 'sections/shortform/index.scss';
-@import 'sections/shortform/lance.scss';
+// @import 'sections/shortform/lance.scss';
 
 // utlitly functions
 .show{
@@ -17,6 +17,7 @@
 .sticky {
     position: fixed;
     top: 0;
+    left: 0;    
     width: 100%
   }
   
