--- a/templates/partials/_footer.twig
+++ b/templates/partials/_footer.twig
@@ -1,11 +1,14 @@
 <footer class="container-fluid p-4">
   <div class="row">
     <div class="col">
-      <a class="d-block text-center" href="/"><img class="img-fluid" src="/images/conversion-logo.png" alt=""></a>
+      <a class="d-block text-center" href="/"><img class="" src="/images/conversion-logo.png" alt="" height="50"></a>
     </div>
   </div>
 </footer>
 
+<div class="container-fluid p-4" id="apply-bottom">
+    <a class="d-block mx-auto text-center h4 text-white" href=""> &plus; APPLY NOW</a>  
+</div>
 
 
 <!-- WOW JS -->
@@ -37,11 +40,11 @@
       auto: false,
       autoControls: true,
       stopAutoOnClick: true,
-      pager: true,    
-      pagerType: 'short',   
-      pagerShortSeparator:' of ',
-       infiniteLoop: false,
-      hideControlOnEnd: true 
+      pager: true,
+      pagerType: 'short',
+      pagerShortSeparator: ' of ',
+      infiniteLoop: false,
+      hideControlOnEnd: true
     });
   });
 </script>
