--- a/SCSS/sections/shortform/index.scss
+++ b/SCSS/sections/shortform/index.scss
@@ -1,10 +1,4 @@
-.shortform{
-    min-height:400px;
-}
 
-.green-form {
-    background-color: #76C168;
-}
 
 .black-form {
     background: rgb(62, 64, 64);
@@ -14,9 +8,21 @@
     filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#3e4040", endColorstr="#192326", GradientType=1);
 }
 
-.gray-form{
-background: #5C5C5C;
-background: -moz-linear-gradient(45deg, #5C5C5C 0%, #637076 100%);
-background: -webkit-linear-gradient(45deg, #5C5C5C 0%, #637076 100%);
-background: linear-gradient(45deg, #5C5C5C 0%, #637076 100%);
+.gray-form {
+    background: #5C5C5C;
+    background: -moz-linear-gradient(45deg, #5C5C5C 0%, #637076 100%);
+    background: -webkit-linear-gradient(45deg, #5C5C5C 0%, #637076 100%);
+    background: linear-gradient(45deg, #5C5C5C 0%, #637076 100%);
+}
+
+
+// SUCCESS BACKGROUND
+.green-form {
+    background-color: #76C168;
+}
+
+.form-style{
+    label{
+        color: #fff;
+    }
 }
