--- a/templates/jobs/index.twig
+++ b/templates/jobs/index.twig
@@ -76,28 +76,28 @@
                 <div class="col-sm-12 col-md-6">
                     <h3 class="job-header">{{entry.jobType}}</h3>
                     <p><strong><em>State</em></strong> {{entry.state}}</p>
-                    <p><strong><em>City</em></strong> {{entry.city}}</p>     
-                      {# ZIP #}
-                    <p><strong><em>Zip</em></strong> {{entry.jobAddress.zip}}</p>              
+                    <p><strong><em>City</em></strong> {{entry.city}}</p>
+                    {# ZIP #}
+                    <p><strong><em>Zip</em></strong> {{entry.jobAddress.zip}}</p>
                     <a class="btn btn-small btn-details" href="/jobs/{{entry.slug}}">Get More Details &nbsp; <i
-                            class="fas fa-arrow-right"></i></a>                  
+                            class="fas fa-arrow-right"></i></a>
                 </div>
                 <div class="col-sm-12 col-md-6">
                     <div class="container">
-                    <div class="row">
-                        <p><strong>Driver Type:</strong> <br>{{entry.driverType}} </p> &nbsp;&nbsp;&nbsp;
-                        <p><strong>Truck Type:</strong><br>{{entry.truckType}}</p> &nbsp;&nbsp;&nbsp;
-                        <p><strong> Job Type:</strong><br>{{entry.jobType}}</p> &nbsp;&nbsp;&nbsp;
-                    </div>
+                        <div class="row">
+                            <p><strong>Driver Type:</strong> <br>{{entry.driverType}} </p> &nbsp;&nbsp;&nbsp;
+                            <p><strong>Truck Type:</strong><br>{{entry.truckType}}</p> &nbsp;&nbsp;&nbsp;
+                            <p><strong> Job Type:</strong><br>{{entry.jobType}}</p> &nbsp;&nbsp;&nbsp;
+                        </div>
                     </div>
                     <div class="container">
-                    <div class="row">
-                        <p class="pt-2"><strong>Benefits: </strong> <br>
-                            {% for option in entry.jobBenefits %}
-                            {{ option.label }}, 
-                            {% endfor %}
-                        </p>
-                    </div>
+                        <div class="row">
+                            <p class="pt-2"><strong>Benefits: </strong> <br>
+                                {% for option in entry.jobBenefits %}
+                                {{ option.label }},
+                                {% endfor %}
+                            </p>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -106,37 +106,39 @@
     {% endfor %}
 
     <div class="container text-center">
-               {% if pageInfo.prevUrl %}<a href='{{ pageInfo.prevUrl }}' class='btn btn-small btn-success text-center'>&lt;</a>{% endif %}
+        {% if pageInfo.prevUrl %}<a href='{{ pageInfo.prevUrl }}'
+            class='btn btn-small btn-success text-center'>&lt;</a>{% endif %}
 
-                    {% if pageInfo.currentPage > 2 %}
-                        <a class='btn btn-small btn-success text-center' href='{{ pageInfo.firstUrl }}'>{{ 1 }}</a>
-                    {% endif %}
+        {% if pageInfo.currentPage > 2 %}
+        <a class='btn btn-small btn-success text-center' href='{{ pageInfo.firstUrl }}'>{{ 1 }}</a>
+        {% endif %}
 
-                    {% if pageInfo.currentPage > 3 %}
-                        <span>...</span>
-                    {% endif %}
+        {% if pageInfo.currentPage > 3 %}
+        <span>...</span>
+        {% endif %}
 
-                    {% for page, url in pageInfo.getPrevUrls(1) %}
-                        <a class='btn btn-small btn-success text-center' href='{{ url }}'>{{ page }}</a>
-                    {% endfor %}
-                         <span class='btn btn-small btn-success text-center'>{{ pageInfo.currentPage }}</span>
+        {% for page, url in pageInfo.getPrevUrls(1) %}
+        <a class='btn btn-small btn-success text-center' href='{{ url }}'>{{ page }}</a>
+        {% endfor %}
+        <span class='btn btn-small btn-success text-center'>{{ pageInfo.currentPage }}</span>
 
-                    {% for page, url in pageInfo.getNextUrls(1) %}
-                        <a class='btn btn-small btn-success text-center' href='{{ url }}'>{{ page }}</a>
-                    {% endfor %}
-
-
-                    {% if pageInfo.currentPage < pageInfo.totalPages-2 %}
-                        <span>...</span>
-                    {% endif %}
-
-                    {% if pageInfo.currentPage < pageInfo.totalPages-1 %}
-                        <a class='btn btn-small btn-success text-center' href='{{ pageInfo.lastUrl }}'>{{ pageInfo.totalPages }}</a>
-                    {% endif %}
-
-                    {% if pageInfo.nextUrl %}<a href='{{ pageInfo.nextUrl }}' class='btn btn-small btn-success text-center'>&gt;</a>{% endif %}
+        {% for page, url in pageInfo.getNextUrls(1) %}
+        <a class='btn btn-small btn-success text-center' href='{{ url }}'>{{ page }}</a>
+        {% endfor %}
 
 
-</div>
+        {% if pageInfo.currentPage < pageInfo.totalPages-2 %}
+        <span>...</span>
+        {% endif %}
+
+        {% if pageInfo.currentPage < pageInfo.totalPages-1 %}
+        <a class='btn btn-small btn-success text-center' href='{{ pageInfo.lastUrl }}'>{{ pageInfo.totalPages }}</a>
+        {% endif %}
+
+        {% if pageInfo.nextUrl %}<a href='{{ pageInfo.nextUrl }}'
+            class='btn btn-small btn-success text-center'>&gt;</a>{% endif %}
+
+
+    </div>
 </div>
 {% endblock %}
