adding refactored changes

--- a/SCSS/sections/index/_apply-bottom.scss
+++ b/SCSS/sections/index/_apply-bottom.scss
@@ -1,9 +1,5 @@
-footer{
-    background-color: #192326;
-}
-
 #apply-bottom{
-    background-color: #5D5D5D;
+    background-color: #19D419;
     display: none;
 }
 
