--- a/SCSS/sections/index/index.scss
+++ b/SCSS/sections/index/index.scss
@@ -4,4 +4,5 @@
 @import '_summary.scss';
 @import '_video.scss';
 @import '_jobs-benefits.scss';
-@import '_footer.scss';
+@import '_conversion-logo';
+@import '_apply-bottom.scss';
