--- a/templates/_layout.twig
+++ b/templates/_layout.twig
@@ -1,19 +1,16 @@
 {% include "partials/_header" %}
     {# SEO SECTION HERE #}
-    {% block SEO %}  {% endblock %}
+    {% block SEO %}  
+    {% endblock %}
 
   </head>
   <body class="container-fluid p-0">
-
- 
- 
 {% include "partials/_nav" %}
 
 {% block main %}
-
-
-
 {% endblock %}
 
 
+{% include "partials/_conversion-logo" %}
+{% include "partials/_apply-bottom" %}
 {% include "partials/_footer" %}
