--- a/templates/pages/thanks.twig
+++ b/templates/pages/thanks.twig
@@ -2,6 +2,13 @@
 {% block main %}
 <div class="container-fluid green-form p-4">
     <div class="container">
+
+             {# PROGRESS BAR #}
+            <div class="form-group text-center">
+            <label for="file">Application Progress</label> <br>
+            <progress class="progess-bar" id="file" max="100" value="100"> Complete </progress>
+            </div>
+
         <h1 class="text-white">Congratulations</h1>
         <br>
         <h3 class="text-white">You qualify and are one step closer <br> to a great career with Conversionia!</h3>
