--- a/templates/forms/index.twig
+++ b/templates/forms/index.twig
@@ -1,5 +1,11 @@
-{% extends "_layout" %}
-{% block main %}
+{% include "partials/_header" %}
+    {# SEO SECTION HERE #}
+    {% block SEO %}  
+    {% endblock %}
+
+  </head>
+  <body class="container-fluid p-0">
+{% include "partials/_nav" %}
        
 
 {% set form = craft.freeform.form("shortform") %}
@@ -38,6 +44,12 @@
     <div class="container">
         <div class="row">
             <div class="col-md-8 offset-md-2 pt-5 pb-5">
+
+            {# PROGRESS BAR #}
+            <div class="form-group text-center">
+            <label for="file">Application Progress</label> <br>
+            <progress class="progess-bar" id="file" max="100" value="25"> Step 1 </progress>
+            </div>
     
     <div class="form-group">
     {{ form.get('wgvMEmpVq').render }}
@@ -97,6 +109,18 @@
         <div class="row">
             <div class="col-md-8 offset-md-2 pt-5 pb-5">
 
+            {# PROGRESS BAR #}
+            <div class="form-group text-center">
+            <label for="file">Application Progress</label> <br>
+            <progress class="progess-bar" id="file" max="100" value="50"> Step 2 </progress>
+            </div>
+    
+
+    <div class="form-group">
+    {{ form.get('P2xrBpO5A').render }}
+    </div>
+
+
     <div class="form-group">
  	<label>{{ cdla.label }}</label>
      <br>
@@ -137,6 +161,13 @@
         <div class="row">
             <div class="col-md-8 offset-md-2 pt-5 pb-5">
 
+            {# PROGRESS BAR #}
+            <div class="form-group text-center">
+            <label for="file">Application Progress</label> <br>
+            <progress class="progess-bar" id="file" max="100" value="75"> Step 3 </progress>
+            </div>
+    
+
     <div class="form-group">
     <label>{{ driveRecord.label }}</label> <br> 
 	{% for option in driveRecord.options %}
@@ -175,6 +206,12 @@
         <div class="row">
             <div class="col-md-4 offset-md-4 pt-5 pb-5">
 
+               {# PROGRESS BAR #}
+            <div class="form-group text-center">
+            <label for="file">Application Progress</label> <br>
+            <progress class="progess-bar" id="file" max="100" value="90"> Step 4 </progress>
+            </div>
+
     <div class="form-group">
     <label for="{{consent}}">{{consent.label}}</label>
     <input type="checkbox" name="{{consent}}" value="{{consent.value}}">
@@ -199,6 +236,5 @@
 
 {{ form.renderClosingTag }}
 
-
-
-{% endblock %}
+{% include "partials/_conversion-logo" %}
+{% include "partials/_footer" %}
