--- a/templates/index.twig
+++ b/templates/index.twig
@@ -23,7 +23,7 @@
             <h4 class="subHeadline">{{entry.subHeadline}}</h4>
             <div class="row p-2 button_row">
                 <div class="col-sm-12 col-md-6 pt-3">
-                    <a href="#" class="btn btn-lg btn-success"> <i class="fas fa-plus"></i> Apply Now</a>
+                    <a href="/forms" class="btn btn-lg btn-success"> <i class="fas fa-plus"></i> Apply Now</a>
                 </div>
                 <div class="col-sm-12 col-md-6 pt-3">
                     <a href="/jobs" class="btn btn-lg btn-secondary"><i class="fas fa-search"></i> Search Jobs</a>
