--- a/SCSS/sections/index/_jumbo.scss
+++ b/SCSS/sections/index/_jumbo.scss
@@ -65,6 +65,9 @@
                     font-size: 1em;
                 }
             }
+            .button_row{
+                width: 100%;
+            }
         }
     }
 }
