--- a/SCSS/sections/index/index.scss
+++ b/SCSS/sections/index/index.scss
@@ -1,5 +1,5 @@
 @import '_nav.scss';
-@import '_homepage.scss';
+@import '_jumbo.scss';
 @import '_banner.scss';
 @import '_summary.scss';
 @import '_video.scss';
