--- a/templates/pages/_entry.twig
+++ b/templates/pages/_entry.twig
@@ -2,11 +2,26 @@
 
 {# <!-- THIS IS FOR SEO, PARTIALLY TAKEN OUT OF HEAD TAG --> #}
 {% block SEO %}
-{# {% for entry in craft.entries.section('home') %} #}
-<meta name="keywords" content="{{entry.keywords}}">
-<meta name="description" content="{{entry.metaDescription}}">
-<title>{{entry.titleTag}}</title>
-{# {% endfor %} #}
+ {# keywords #}
+    {% if entry.keywords %}
+            <meta name="keywords" content="{{entry.keywords}}">
+        {% else %}
+            <meta name="keywords" content="{{global.keywords}}">
+    {% endif %}
+
+    {# meta description #}
+    {% if entry.metaDescription %}
+            <meta name="description" content="{{entry.metaDescription}}">
+        {% else %}
+            <meta name="description" content="{{global.metaDescription}}">
+    {% endif %}
+
+    {# title tag #}
+    {% if entry.titleTag %}
+            <title>{{entry.titleTag}}</title>
+        {% else %}
+            <title>{{global.titleTag}}</title>
+    {% endif %}
 {% endblock %}
 
 
