keeping footer at the bottom with position absolute

--- a/templates/_layout.twig
+++ b/templates/_layout.twig
@@ -9,6 +9,8 @@
 {% block main %}
 {% endblock %}
 
+<div class="sticky-logo-apply-container sticky-bottom">
 {% include "partials/_conversion-logo" %}
 {% include "partials/_apply-bottom" %}
+</div>
 {% include "partials/_footer" %}
