--- a/templates/index.twig
+++ b/templates/index.twig
@@ -4,10 +4,13 @@
 {% block SEO %}
 
     {# keywords #}
-    {% if entry.keywords %}
-            <meta name="keywords" content="{{entry.keywords}}">
-        {% else %}
-            <meta name="keywords" content="{{global.keywords}}">
+    {% if entry.keywordTags is not empty %}      
+        {% set entries = entry %}
+            <meta name="keywords" content="{% for tag in craft.tags.relatedTo(entries) %}{{ tag.title }} {% endfor %}">
+        {% else %}   
+            {% set myTagQuery = craft.tags().group('globalTags') %}
+            {% set tags = myTagQuery.all() %} 
+        <meta name="keywords"  content="{% for tag in tags %} {{ tag.title }} {% endfor %}">
     {% endif %}
 
     {# meta description #}
