--- a/SCSS/main.scss
+++ b/SCSS/main.scss
@@ -9,7 +9,7 @@
     margin: 0 auto;
 }
 .show-tabs{
-    display: flex !important;
+    display: block !important;
 }
 
 /* The sticky class is added to the header with JS when it reaches its scroll position */
