--- a/SCSS/sections/index/_nav.scss
+++ b/SCSS/sections/index/_nav.scss
@@ -57,17 +57,24 @@
             display: none;
             z-index: 100;
             border-radius: 10px;
-            background-color: inherit;
-            position: relative !important;
-            float: right;
-            margin-right: 5%;
+            background-color: #5C5C5C;
+            // position: relative !important;
+            right: 0 !important;
+            left: unset !important;
+            width: 50px;
+            // float: right;
+            // margin-right: 5%;
                 a {
                     color: #fff;
                     font-weight: bold;
-                }            
+                }    
+                a:hover{
+                    background-color: hsl(0, 0%, 51%);
+                    text-decoration: underline;
+                }        
         }
         #driver-tabs:hover {
-            background-color: inherit;
+            background-color: #5C5C5C;
         }
     }
 }
