--- a/web/styles/main.css
+++ b/web/styles/main.css
@@ -42,15 +42,18 @@
       display: none;
       z-index: 100;
       border-radius: 10px;
-      background-color: inherit;
-      position: relative !important;
-      float: right;
-      margin-right: 5%; }
+      background-color: #5C5C5C;
+      right: 0 !important;
+      left: unset !important;
+      width: 50px; }
       #nav-container #nav-bottom #driver-tabs a {
         color: #fff;
         font-weight: bold; }
+      #nav-container #nav-bottom #driver-tabs a:hover {
+        background-color: #828282;
+        text-decoration: underline; }
     #nav-container #nav-bottom #driver-tabs:hover {
-      background-color: inherit; }
+      background-color: #5C5C5C; }
 
 @media (max-width: 345px) {
   #nav-container {
