--- a/web/styles/main.css
+++ b/web/styles/main.css
@@ -213,12 +213,16 @@ footer {
     max-width: 200px; }
 
 #search-header {
-  background-color: #5c5c5c; }
+  height: 400px;
+  background-image: url("/images/truck-jobs.jpg");
+  background-position: center; }
   #search-header h3 {
     color: #fff;
     font-weight: bold;
     padding: 10px 0px;
-    font-family: sans-serif; }
+    font-family: sans-serif;
+    font-size: 40px;
+    text-shadow: 0px 0px 12px #000000; }
 
 .jobs-index {
   background-color: #E2E2E2; }
