--- a/SCSS/main.scss
+++ b/SCSS/main.scss
@@ -1,4 +1,4 @@
-@import 'sections/index/index.scss';
+@import 'sections/partials/index.scss';
 @import 'sections/jobs/index.scss';
 @import 'sections/shortform/index.scss';
 // @import 'sections/shortform/lance.scss';
