--- a/templates/jobs/searchjobs/search-controller.twig
+++ b/templates/jobs/searchjobs/search-controller.twig
@@ -4,93 +4,127 @@
           <div class="col-8 offset-2">
 
               <form action="{{ url('jobs/searchjobs/results') }}">
-                  {# SELECT STATE #}
-                  <div class="form-group">
-                      <select name="state" class="form-control bg-gray" id="">
-                          <option value="" selected="selected">Select a State</option>
-                          <option value="AL">Alabama</option>
-                          <option value="AK">Alaska</option>
-                          <option value="AZ">Arizona</option>
-                          <option value="AR">Arkansas</option>
-                          <option value="CA">California</option>
-                          <option value="CO">Colorado</option>
-                          <option value="CT">Connecticut</option>
-                          <option value="DE">Delaware</option>
-                          <option value="DC">District Of Columbia</option>
-                          <option value="FL">Florida</option>
-                          <option value="GA">Georgia</option>
-                          <option value="HI">Hawaii</option>
-                          <option value="ID">Idaho</option>
-                          <option value="IL">Illinois</option>
-                          <option value="IN">Indiana</option>
-                          <option value="IA">Iowa</option>
-                          <option value="KS">Kansas</option>
-                          <option value="KY">Kentucky</option>
-                          <option value="LA">Louisiana</option>
-                          <option value="ME">Maine</option>
-                          <option value="MD">Maryland</option>
-                          <option value="MA">Massachusetts</option>
-                          <option value="MI">Michigan</option>
-                          <option value="MN">Minnesota</option>
-                          <option value="MS">Mississippi</option>
-                          <option value="MO">Missouri</option>
-                          <option value="MT">Montana</option>
-                          <option value="NE">Nebraska</option>
-                          <option value="NV">Nevada</option>
-                          <option value="NH">New Hampshire</option>
-                          <option value="NJ">New Jersey</option>
-                          <option value="NM">New Mexico</option>
-                          <option value="NY">New York</option>
-                          <option value="NC">North Carolina</option>
-                          <option value="ND">North Dakota</option>
-                          <option value="OH">Ohio</option>
-                          <option value="OK">Oklahoma</option>
-                          <option value="OR">Oregon</option>
-                          <option value="PA">Pennsylvania</option>
-                          <option value="RI">Rhode Island</option>
-                          <option value="SC">South Carolina</option>
-                          <option value="SD">South Dakota</option>
-                          <option value="TN">Tennessee</option>
-                          <option value="TX">Texas</option>
-                          <option value="UT">Utah</option>
-                          <option value="VT">Vermont</option>
-                          <option value="VA">Virginia</option>
-                          <option value="WA">Washington</option>
-                          <option value="WV">West Virginia</option>
-                          <option value="WI">Wisconsin</option>
-                          <option value="WY">Wyoming</option>
-                      </select>
+                  {# TOP ROW #}
+                  <div class="row">
+                      {# Select Truck Type #}
+                      <div class="col-sm-12 col-md-6">
+                          <div class="form-group">
+                              <select name="trucktype" class="form-control bg-gray" id="">
+                                  <option value="">Select truck type</option>
+                                  <option value="tanker">tanker</option>
+                                  <option value="van">van</option>
+                                  <option value="reefer">reefer</option>
+                              </select>
+                          </div>
+                      </div>
+                      {# Select Job Type #}
+                      <div class="col-sm-12 col-md-6">
+                          <div class="form-group">
+                              <select name="jobtype" class="form-control bg-gray" id="">
+                                  <option value="">Select job type type</option>
+                                  <option value="otr">OTR</option>
+                                  <option value="regional">Regional</option>
+                                  <option value="dedicated">Dedicated</option>
+                                  <option value="local">Local</option>
+                              </select>
+                          </div>
+                      </div>
                   </div>
 
-                  {# Select Truck Type #}
-                  <div class="form-group">
-                      <select name="trucktype" class="form-control bg-gray" id="">
-                          <option value="">Select truck type</option>
-                          <option value="tanker">tanker</option>
-                          <option value="van">van</option>
-                          <option value="reefer">reefer</option>
-                      </select>
+                  {# MIDDLE ROW #}
+                  <div class="row">
+                      {# SELECT STATE #}
+                      <div class="col-sm-12 col-md-4">
+                          <div class="form-group">
+                              <select name="state" class="form-control bg-gray" id="">
+                                  <option value="" selected="selected">Select a State</option>
+                                  <option value="AL">Alabama</option>
+                                  <option value="AK">Alaska</option>
+                                  <option value="AZ">Arizona</option>
+                                  <option value="AR">Arkansas</option>
+                                  <option value="CA">California</option>
+                                  <option value="CO">Colorado</option>
+                                  <option value="CT">Connecticut</option>
+                                  <option value="DE">Delaware</option>
+                                  <option value="DC">District Of Columbia</option>
+                                  <option value="FL">Florida</option>
+                                  <option value="GA">Georgia</option>
+                                  <option value="HI">Hawaii</option>
+                                  <option value="ID">Idaho</option>
+                                  <option value="IL">Illinois</option>
+                                  <option value="IN">Indiana</option>
+                                  <option value="IA">Iowa</option>
+                                  <option value="KS">Kansas</option>
+                                  <option value="KY">Kentucky</option>
+                                  <option value="LA">Louisiana</option>
+                                  <option value="ME">Maine</option>
+                                  <option value="MD">Maryland</option>
+                                  <option value="MA">Massachusetts</option>
+                                  <option value="MI">Michigan</option>
+                                  <option value="MN">Minnesota</option>
+                                  <option value="MS">Mississippi</option>
+                                  <option value="MO">Missouri</option>
+                                  <option value="MT">Montana</option>
+                                  <option value="NE">Nebraska</option>
+                                  <option value="NV">Nevada</option>
+                                  <option value="NH">New Hampshire</option>
+                                  <option value="NJ">New Jersey</option>
+                                  <option value="NM">New Mexico</option>
+                                  <option value="NY">New York</option>
+                                  <option value="NC">North Carolina</option>
+                                  <option value="ND">North Dakota</option>
+                                  <option value="OH">Ohio</option>
+                                  <option value="OK">Oklahoma</option>
+                                  <option value="OR">Oregon</option>
+                                  <option value="PA">Pennsylvania</option>
+                                  <option value="RI">Rhode Island</option>
+                                  <option value="SC">South Carolina</option>
+                                  <option value="SD">South Dakota</option>
+                                  <option value="TN">Tennessee</option>
+                                  <option value="TX">Texas</option>
+                                  <option value="UT">Utah</option>
+                                  <option value="VT">Vermont</option>
+                                  <option value="VA">Virginia</option>
+                                  <option value="WA">Washington</option>
+                                  <option value="WV">West Virginia</option>
+                                  <option value="WI">Wisconsin</option>
+                                  <option value="WY">Wyoming</option>
+                              </select>
+                          </div>
+                      </div>
+
+                      {# select city #}
+                      <div class="col-sm-12 col-md-4">
+                          <div class="form-group">
+                              <input id="city" name="city" type="text" class="form-control bg-gray"
+                                  placeholder="city" />
+                          </div>
+                      </div>
+
+                      {# select zipcode #}
+                      <div class="col-sm-12 col-md-4">
+                          <div class="form-group">
+                              <input id="zip" name="zip" type="number" pattern="[0-9]*" class="form-control bg-gray"
+                                  placeholder="zip code" />
+                          </div>
+                      </div>
                   </div>
 
-                  {# select city #}
-                  <div class="form-group">
-                      <input id="city" name="city" type="text" class="form-control bg-gray" placeholder="city" />
-                  </div>
-
-                  {# select zipcode #}
-                  <div class="form-group">
-                      <input id="zip" name="zip" type="number" pattern="[0-9]*" class="form-control bg-gray"
-                          placeholder="zip code" />
-                  </div>
-
-                  {# select range #}
-                  <div class="form-group">
-                      <input id="range" name="range" type="number" pattern="[0-9]*" class="form-control bg-gray"
-                          placeholder="range in miles" />
-                  </div>
-
-                  <button type="submit" value="Search" class="btn btn-lg search-jobs-btn"> <i class="fas fa-search"></i>
+                  {# BOTTOM ROW #}
+                  <div class="row">
+                      {# select range #}
+                      <div class="col-sm-12 col-md-4 offset-md-2">
+                          <div class="form-group">
+                              <input id="range" name="range" type="number" pattern="[0-9]*" class="form-control bg-gray"
+                                  placeholder="range in miles" />
+                          </div>
+                      </div>
+                      <div class="col-sm-12 col-md-4">
+                      <button type="submit" value="Search" class="btn btn-lg search-jobs-btn"> <i class="fas fa-search"></i>
                       Search Jobs</button>
+                      </div>
+                  </div>                  
+
               </form>
 
           </div>
