adding images to results

--- a/templates/jobs/searchjobs/results.twig
+++ b/templates/jobs/searchjobs/results.twig
@@ -112,8 +112,10 @@
     {% else %}
         
     
-    <div class="search-again">
-        <h3 class="text-center">Didn't find what you're looking for?</h3>
+    <div class="search-again conatiner-fluid pt-0 pb-5">
+    <div class="container-fluid p-0" id="search-again-image">
+    </div>
+        <h3 class="text-center mt-5">Didn't find what you're looking for?</h3>
         <a class="btn btn-lg btn-success search-again-btn" href="/jobs">Search Again</a>
     </div>
 
