--- a/SCSS/sections/jobs/_results.scss
+++ b/SCSS/sections/jobs/_results.scss
@@ -8,4 +8,11 @@
         margin-top: 30px;
         max-width: 200px;
     }   
+    #search-again-image{
+        height: 400px;
+        background-image: url("/images/truck-jobs-2.jpg");
+        background-position: bottom center;
+        background-size: cover;
+    }
+
 }
