attempting sticky footer

--- a/SCSS/main.scss
+++ b/SCSS/main.scss
@@ -12,20 +12,11 @@
     display: block !important;
 }
 
-/* The sticky class is added to the header with JS when it reaches its scroll position */
-.sticky {
-    position: fixed;
-    top: 0;
-    left: 0;    
-    width: 100%
-  }
-  
-  /* Add some top padding to the page content to prevent sudden quick movement (as the header gets a new position at the top of the page (position:fixed and top:0) */
-  .sticky + .content {
-    padding-top: 102px;
-  }
-
-  .sticky-bottom {
-    position: absolute;
-    width: 100%
-  }
+.site-container {
+  display: flex !important;
+  flex-direction: column !important;
+  min-height: 100vh !important;
+}
+.site-content {
+  flex: 1 !important;
+}
