--- a/templates/_layout.twig
+++ b/templates/_layout.twig
@@ -3,8 +3,10 @@
     {% block SEO %}  
     {% endblock %}
   </head>
-  <div class="site-container site-content">
-  <body class="container-fluid p-0">
+  
+  {# utility-site-container is a utility class located in utility SCSS folder #}
+  <div class="utility-site-container">
+  <body class="container-fluid p-0 utility-site-content">
 {% include "partials/_nav" %}
 
 {% block main %}
