--- a/templates/jobs/searchjobs/results.twig
+++ b/templates/jobs/searchjobs/results.twig
@@ -111,8 +111,8 @@
 
     {% else %}
         
-    
-    <div class="search-again conatiner-fluid pt-0 pb-5">
+    {# SITE CONTENT CLASS IS A UTILITLY CLASS #}
+    <div class="search-again conatiner-fluid pt-0 pb-5 utility-site-content">
     <div class="container-fluid p-0" id="search-again-image">
     </div>
         <h3 class="text-center mt-5">Didn't find what you're looking for?</h3>
