--- a/web/styles/main.css
+++ b/web/styles/main.css
@@ -306,10 +306,27 @@ footer {
 .show-tabs {
   display: block !important; }
 
-.site-container {
+/* The sticky class is added to the header with JS when it reaches its scroll position */
+.sticky {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%; }
+
+/* Add some top padding to the page content to prevent sudden quick movement (as the header gets a new position at the top of the page (position:fixed and top:0) */
+.sticky + .content {
+  padding-top: 102px; }
+
+.sticky-bottom {
+  position: absolute;
+  width: 100%; }
+
+/* The following utilities are for keeping the footer 
+ down if there is not enough content to push it to the bottom of the page using flexbox techniques */
+.utility-site-container {
   display: flex !important;
   flex-direction: column !important;
   min-height: 100vh !important; }
 
-.site-content {
+.utility-site-content {
   flex: 1 !important; }
