--- a/templates/jobs/searchjobs/search-controller.twig
+++ b/templates/jobs/searchjobs/search-controller.twig
@@ -34,7 +34,7 @@
                   {# MIDDLE ROW #}
                   <div class="row">
                       {# SELECT STATE #}
-                      <div class="col-sm-12 col-md-4">
+                      <div class="col-sm-12 col-md-3">
                           <div class="form-group">
                               <select name="state" class="form-control bg-gray" id="">
                                   <option value="" selected="selected">Select a State</option>
@@ -94,15 +94,19 @@
                       </div>
 
                       {# select city #}
-                      <div class="col-sm-12 col-md-4">
+                      <div class="col-sm-12 col-md-3">
                           <div class="form-group">
                               <input id="city" name="city" type="text" class="form-control bg-gray"
                                   placeholder="city" />
                           </div>
                       </div>
-
+                      <div class="col-sm-12 col-md-1">
+                          <div class="form-group">
+                        <h3 class="text-center">OR</h3>
+                        </div>
+                        </div>
                       {# select zipcode #}
-                      <div class="col-sm-12 col-md-4">
+                      <div class="col-sm-12 col-md-3">
                           <div class="form-group">
                               <input id="zip" name="zip" type="number" pattern="[0-9]*" class="form-control bg-gray"
                                   placeholder="zip code" />
