adding global fall back for head

--- a/templates/jobs/_entry.twig
+++ b/templates/jobs/_entry.twig
@@ -3,9 +3,31 @@
 
 {# <!-- THIS IS FOR SEO, PARTIALLY TAKEN OUT OF HEAD TAG --> #}
 {% block SEO %}
-<meta name="keywords" content="{{entry.keywords}}">
-<meta name="description" content="{{entry.metaDescription}}">
-<title>{{entry.titleTag}}</title>
+       {# keywords #}
+    {% if entry.keywordTags is not empty %}      
+        {% set entries = entry %}
+            <meta name="keywords" content="{% for tag in craft.tags.relatedTo(entries) %}{{ tag.title }} {% endfor %}">
+        {% else %}   
+            {% set myTagQuery = craft.tags().group('globalTags') %}
+            {% set tags = myTagQuery.all() %} 
+            <meta name="keywords"  content="{% for tag in tags %} {{ tag.title }} {% endfor %}">
+    {% endif %}
+
+    {# meta description #}
+    {% if entry.metaDescription %}
+            <meta name="description" content="{{entry.metaDescription}}">
+        {% else %}
+            <meta name="description" content="{{global.metaDescription}}">
+    {% endif %}
+
+    {# title tag #}
+    {% if entry.titleTag %}
+            <title>{{entry.titleTag}}</title>
+        {% else %}
+            <title>{{global.titleTag}}</title>
+    {% endif %}
+
+
 {% endblock %}
 
 {# <!-- THIS IS THE MAIN CONTENT THAT YOU WILL SEE ON THE ENTRY PAGE 
