--- a/templates/jobs/_entry.twig
+++ b/templates/jobs/_entry.twig
@@ -33,7 +33,8 @@
 {# <!-- THIS IS THE MAIN CONTENT THAT YOU WILL SEE ON THE ENTRY PAGE 
 UP UNTILL THE FOOTER --> #}
 {% block main %}
-<div class="container-fluid pt-5 pb-1 jobs-index">
+{# WE ADD THE utility CLASS TO MAKE TO CONTENT GO ALL THE WAY DOWN #}
+<div class="container-fluid pt-5 pb-1 jobs-index utility-site-content">
     <div class="row p-4">
         <div class="col-sm-8 offset-sm-2 col-md-8 bg-light p-2">
             <div class="row">
